// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the private route allows authenticated access 1`] = `
<DocumentFragment>
  This will be in the snapshot
</DocumentFragment>
`;

exports[`the private route blocks unauthenticated access 1`] = `
<DocumentFragment>
  <h1>
    Not Authorized
  </h1>
</DocumentFragment>
`;
